<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegistrationActivity" >

    <Button
        android:id="@+id/buttonExpWithPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextConfirm"
        android:layout_alignRight="@+id/editTextConfirm"
        android:layout_below="@+id/editTextConfirm"
        android:layout_marginTop="20dp"
        android:onClick="registration"
        android:text="@string/regPass" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:ems="10"
        android:hint="@string/Pass"
        android:inputType="textPassword" >

    </EditText>

    <EditText
        android:id="@+id/editTextConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextPassword"
        android:ems="10"
        android:hint="@string/confPass"
        android:inputType="textPassword" />

</RelativeLayout>
